force-app/main/default/objects/Driver__c/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <label>License No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>