force-app/main/default/objects/Driver__c/fields/Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Valid_Upto__c</fullName>
    <label>Valid Upto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>